--- a/cars.html
+++ b/cars.html
@@ -52,7 +52,13 @@
 
         <!-- Правий блок (№4) -->
         <aside class="sidebar">
-            <img src="5thPage.png" alt="Drift car" style="width:100%;">
+            
+        <img src="5thPage.png" alt="DriftCar" style="width:100%;" usemap="#driftMap">
+        <map id="driftMap" name="driftMap">
+            <area shape="rect" coords="145.00004882812505,35.0000030517578,214.40004882812505,97.4000030517578" title="Історія дрифту" alt="Історія дрифту" href="history.html" target="_blank">
+            <area shape="rect" coords="227.00004882812505,73.0000030517578,251.40004882812505,151.4000030517578" title="Оцінювання змагань" alt="Оцінювання змагань" href="rating.html" target="_blank">
+            <area shape="rect" coords="207.00004882812505,166.0000030517578,291.400048828125,218.4000030517578" title="Про Дрифт" alt="Про Дрифт" href="about.html" target="_blank">
+        </map>
         </aside>
 
         <!-- Нижній блок між 3 і 4 (№5) -->
