--- a/cars.html
+++ b/cars.html
@@ -38,10 +38,10 @@
             <p>Професійні дрифт-кари часто використовують спеціальні диференціали, які допомагають збалансувати потужність між передньою і задньою осями. Крім того, такі автомобілі зазвичай не оснащені допоміжними системами, як-от ABS (антиблокувальна система гальм) чи TCS (трекшн-контроль), що дозволяє водіям зберігати повний контроль над автомобілем.</p>
             <p>Бренди Toyota і Nissan є основними постачальниками автомобілів для дрифтерів. У 1980-х роках саме ці марки пропонували велику кількість доступних моделей із заднім приводом. Легендарний автомобіль для дрифту – Toyota Corolla Trueno AE86, також відомий як «хачіроку» (японське слово для цифр 8 і 6). Він мав добре збалансоване шасі, передній двигун і задній привід, легку вагу та помірну потужність 130 к.с. (160 к.с. з суперчарджером). Trueno AE86 здобув популярність завдяки серіалу Initial D і досі високо цінується в Японії.
             <img src="Toyota AE86.jpg"alt="Toyota AE86" style="width:70%;">
-            <h6>Toyota AE86</h6>
+            <h6>Toyota AE86</h6></p>
             <p> Серед автомобілів марки Nissan, популярними в дрифті є Silvia S13, 180SX (також відомий як 200SX у Великій Британії) та SilEighty, що поєднує передок від Silvia S13 і кузов 180SX. Задній привід і двигуни CA18 або SR20DET роблять ці автомобілі ідеальними для дрифту. Хоча наступне покоління Silvia (S14) не стало таким популярним, Silvia S15, оснащена двигуном SR20DET і механічною коробкою передач, здобула популярність серед дрифтерів завдяки своїй потужності (250 к.с.) і диференціалу підвищеного тертя.
             <img src="nissan-silvia.jpg"alt="nissan-silvia" style="width:70%;">
-            <h6>Nissan Silvia S15</h6></p></p>
+            <h6>Nissan Silvia S15</h6></p>
             <p> Наприклад, Skyline R34 Blitz активно бере участь у чемпіонаті D1. 
             <img src="nissan-skyline.jpg"alt="nissan-skyline" style="width:70%;">
             <h6>Nissan Skyline ER34</h6></p>
